MSP-5262 Implement /access_list/delete_list
